--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "^2.11.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -34,7 +34,8 @@
     "devserver": "webpack-dev-server --open",
     "webpack": "webpack",
     "build": "webpack --config webpack.config.build.js -p",
-    "beautify": "node beautify"
+    "beautify": "node beautify",
+    "dev": "webpack-dev-server --inline"
   },
   "author": "wei",
   "license": "ISC"
